<resources>

    <!-- Layout de Home -->
    <string name="app_name">superApp</string>
    <string name="bem_vindo">Bem vindo !</string>
    <string name="calculo_de_imc">Calculo de IMC</string>
    <string name="imagem_do_app_gasolina">Imagem_do_app_gasolina</string>
    <string name="imagem_app_calculadora_imc">Imagem_app_calculadora_imc</string>
    <string name="gasolina_ou_etanol">Gasolina ou Etanol</string>
    <string name="veja_qual_combustiv_l_mais_vtajoso">Veja qual combustivél é mais vtajoso</string>
    <string name="rodiz_o_day">Rodizío Day</string>
    <string name="insira_o_numero_completoda_sua_placa_para_sabero_dia_do_seu_rod_zio">Insira o numero completoda sua placa para sabero dia do seu rodízio</string>
    <string name="caculadora_simples">Caculadora simples</string>
    <string name="fa_a_calculos_com_express_es_simples">Faça calculos com expressões simples</string>
    <string name="veja_quando_ser_o_dia_do_seu_rod_zio_pela_placa">Veja quando será o dia do seu rodízio pela placa</string>
    <string name="mulher">Mulher</string>
    <string name="escolha_seu_g_nero">Escolha seu gênero</string>
    <string name="calculadora_de_imc">Calculadora de IMC</string>
    <string name="background_azull">background_azull</string>
    <string name="homem">Homem</string>
    <string name="calcular">Calcular</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="idade">Idade</string>
    <string name="_18">18</string>
    <string name="peso__">Peso</string>
    <string name="_60">60</string>
    <string name="_altura">Altura</string>
    <string name="_000">000</string>
    <string name="eu_sou">Eu sou</string>
    <string name="sou">Sou</string>
    <string name="homemtoggleButton">Homem</string>
    <string name="genero">Gênero</string>
    <string name="mulherSwitchButton">Mulher</string>
    <string name="homemToggleButton">Homem</string>
    <string name="bra">BRA</string>
    <string name="bra2020">BRA2020</string>
    <string name="bra_2020">BRA-2020</string>
    <string name="consulta_placa">Consulta Placa</string>
    <string name="digite_sua_placa_a_baixo">Digite sua Placa a baixo:</string>
    <string name="proximo">proximo</string>
    <string name="botao_sair">Botao sair</string>
    <string name="_00_0_">00.0</string>
    <string name="normal">Normal</string>
    <string name="_16_0_16_9_">16.0 – 16.9</string>
    <string name="abaixo_do_peso">Abaixo do Peso</string>
    <string name="_17_0_18_4">17.0 – 18.4</string>
    <string name="normal_">Normal</string>
    <string name="_18_5_24_9">18.5 – 24.9</string>
    <string name="sobrepeso">Sobre Peso</string>
    <string name="_25_0_29_9">25.0 – 29.9</string>
    <string name="obesidade_grau_i">Obesidade Grau I</string>
    <string name="_30_0_34_9">30.0 – 34.9</string>
    <string name="obesidade_grau_ii">Obesidade Grau II</string>
    <string name="_35_0_39_9">35.0 – 39.9</string>
    <string name="obesidade_grau_iii">Obesidade Grau III</string>
    <string name="_40">40</string>
    <string name="peso_muito_baixo_">Peso Muito Baixo</string>
    <string name="blueball">blueball</string>
    <string name="babyblueball">baby blue ball</string>
    <string name="greenball">green ball</string>
    <string name="yellowball_">yellow ball</string>
    <string name="baby_orangeball">baby orange ball</string>
    <string name="orangeball">orange ball</string>
    <string name="redball">red ball</string>
    <string name="dia_da_semana">Dia da semana</string>
    <string name="final_com">Final Com</string>
    <string name="_1_e_2">1 e 2</string>
    <string name="ter_a_feira">Terça-feira</string>
    <string name="_3_e_4">3 e 4</string>
    <string name="_5_e_6">5 e 6</string>
    <string name="_7_e_8">7 e 8</string>
    <string name="quinta_feira">Quinta-feira</string>
    <string name="sexta_feira">Sexta feira</string>
    <string name="_9_e_0">9 e 0</string>
    <string name="finais_com">Finais com</string>
    <string name="_7h_10h_da_manh">7h - 10h da manhã</string>
    <string name="_17h_20h_da_noite">17h - 20h da noite</string>
    <string name="hor_rios">Horários</string>
    <string name="button">Button</string>
    <string name="gasolina">Gasolina</string>
    <string name="_00_0">00.0</string>
    <string name="rs">R$</string>
    <string name="etanol">Etanol</string>
    <string name="calcular_">Calcular</string>
    <string name="sobre_o_app">Sobre o App</string>
    <string name="para_mais_informa_es">Para mais informações</string>
    <string name="digite_os_valores_abaixo">Digite os valores abaixo</string>
    <string name="cm">Cm</string>
    <string name="veja_se_est_no_peso_ideal">Veja se está no peso ideal</string>
    <string name="veja_a_melhor_opc_o_para_o_seu_carro">Veja a melhor opcão para o seu carro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="botaodemais">botaoDeMais</string>
    <string name="botaodemenos">BotaoDeMenos</string>
    <string name="botaodemenos2">BotaoDeMenos2</string>
    <string name="botaodemais2">botaoDeMais2</string>
    <string name="categoriaPeso">Peso</string>
    <string name="categoria">CATEGORIA</string>
    <string name="imc">IMC</string>
    <string name="_60_">60</string>
    <string name="seu_imc">Seu IMC é:</string>
    <string name="gasolina__">Gasolina</string>
    <string name="digite_o_valor">Digite o valor</string>
    <string name="r">R$</string>
    <string name="etanol__">Etanol</string>
    <string name="_calcular_">Calcular</string>
    <string name="calcular___">Calcular</string>
    <string name="_0_00">0.00</string>

</resources>