<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sair"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="@drawable/sair"
                android:contentDescription="@string/botao_sair" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_card_view"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/seu_imc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_00_0_"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/imcCcategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/normal"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/card_view_2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/balll_blue"
                    android:contentDescription="@string/blueball" />


                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/peso_muito_baixo_"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_16_0_16_9_"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/ball_baby_blue"
                    android:contentDescription="@string/babyblueball" />


                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/abaixo_do_peso"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_17_0_18_4"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/ball_green"
                    android:contentDescription="@string/greenball" />


                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/normal_"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_18_5_24_9"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/ball_yellow"
                    android:contentDescription="@string/yellowball_" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sobrepeso"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_25_0_29_9"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/ball_baby_oranje"
                    android:contentDescription="@string/baby_orangeball" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/obesidade_grau_i"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_30_0_34_9"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/ball_oranje"
                    android:contentDescription="@string/orangeball" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/obesidade_grau_ii"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_35_0_39_9"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/ball_red"
                    android:contentDescription="@string/redball" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/obesidade_grau_iii"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_40"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>