<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ResultadoImc">

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/radius_card_view"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/seu_imc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/resultadoPesoDg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_00_0_"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical"
            android:background="@drawable/radius_card_view">

            <TextView
                android:id="@+id/categoriaImc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:text="@string/categoria"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/ic_barra_de_peso__7_" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
             android:layout_margin="25dp"
            android:padding="5dp"
            android:background="@drawable/radius_card_view"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/balll_blue"
                    android:contentDescription="@string/blueball"
                    tools:ignore="ImageContrastCheck" />


                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/peso_muito_baixo_"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_16_0_16_9_"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ball_baby_blue"
                    android:contentDescription="@string/babyblueball" />


                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/abaixo_do_peso"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_17_0_18_4"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ball_green"
                    android:contentDescription="@string/greenball" />


                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/normal_"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_18_5_24_9"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ball_yellow"
                    android:contentDescription="@string/yellowball_" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sobrepeso"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_25_0_29_9"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ball_baby_oranje"
                    android:contentDescription="@string/baby_orangeball" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/obesidade_grau_i"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_30_0_34_9"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ball_oranje"
                    android:contentDescription="@string/orangeball" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/obesidade_grau_ii"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_35_0_39_9"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ball_red"
                    android:contentDescription="@string/redball" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/obesidade_grau_iii"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_40"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>