<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".RodizioFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/ic_placa"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloDigite">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="7dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/bra_2020"
            android:inputType="number"
            android:maxLength="7"
            android:textSize="70sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tituloDigite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="221dp"
        android:text="@string/digite_sua_placa_a_baixo"
        android:textColor="#D9D9D9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/proximo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>